# openvino-models

openvino_2021.4.582/data_processing/audio/speech_recognition/: CMakeLists.txt  Intel OBL Commercial Use License.txt  README.md  build_msvc.bat
openvino_2021.4.582/data_processing/audio/speech_recognition/3rdPartyFiles/: LICENSES.txt
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/: CMakeLists.txt
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/live_speech_recognition_demo/: README.md  requirements_centos7.txt  requirements_ubuntu18.txt  requirements_ubuntu20.txt  requirements_windows.txt  run_demo.bat  speech_demo_app.py
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/live_speech_recognition_demo/audio/: audio_helper.py
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/live_speech_recognition_demo/gui/: caption_controller.py  caption_frame.py  device_controller.py  device_panel.py  gui_helper.py  main_controller.py  main_frame.py
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/offline_speech_recognition_demo/: CMakeLists.txt  README.md  run_demo.bat
openvino_2021.4.582/data_processing/audio/speech_recognition/demos/offline_speech_recognition_demo/src/: speech_library_app.cpp
openvino_2021.4.582/data_processing/audio/speech_recognition/docs/: speech_library.md
openvino_2021.4.582/data_processing/audio/speech_recognition/include/: command_line_parser.h  logger_api.h  rh_common.h  speech_decoder.h  speech_feature_extraction.h  speech_library.h
openvino_2021.4.582/data_processing/audio/speech_recognition/lib/x64/: decoder_library.lib  feature_extraction_library.lib
openvino_2021.4.582/data_processing/audio/speech_recognition/models/intel/lspeech_s5_ext/: model.yml
openvino_2021.4.582/data_processing/audio/speech_recognition/src/: decoder.cpp  decoder.h  feature_extraction.cpp  feature_extraction.h  kaldi_component_reader.cpp  kaldi_component_reader.h  logger.cpp  logger.h  scorer.cpp  scorer.h  speech_engine.cpp  speech_engine.h  speech_library.cpp  speech_parameters.h
openvino_2021.4.582/data_processing/audio/speech_recognition/tools/: CMakeLists.txt
openvino_2021.4.582/data_processing/audio/speech_recognition/tools/kaldi_slm_conversion_tool/: CMakeLists.txt  README.md
openvino_2021.4.582/data_processing/audio/speech_recognition/tools/kaldi_slm_conversion_tool/src/: slm_converter.cpp
openvino_2021.4.582/deployment_tools/demo/: demo_speech_recognition.bat
openvino_2021.4.582/deployment_tools/inference_engine/: version.txt
openvino_2021.4.582/deployment_tools/inference_engine/share/: InferenceEngineConfig-version.cmake  InferenceEngineConfig.cmake  InferenceEngineTargets-debug.cmake  InferenceEngineTargets-release.cmake  InferenceEngineTargets.cmake
openvino_2021.4.582/deployment_tools/ngraph/: VERSION
openvino_2021.4.582/deployment_tools/ngraph/cmake/: ngraphConfig.cmake  ngraphConfigVersion.cmake  ngraphTargets-debug.cmake  ngraphTargets-release.cmake  ngraphTargets.cmake
openvino_2021.4.582/deployment_tools/ngraph/include/ngraph/: version.hpp
openvino_2021.4.582/deployment_tools/open_model_zoo/: version.txt
openvino_2021.4.582/deployment_tools/tools/deployment_manager/: deployment_manager.py
openvino_2021.4.582/deployment_tools/tools/deployment_manager/configs/: main.json
openvino_2021.4.582/deployment_tools/tools/deployment_manager/deployman/: config.py  logger.py  main.py  ui.py
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/: README.md  main.py  setup.py  version.txt
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/app/: argparser.py  run.py
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/compression/: __init__.py  version.py
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/configs/: README.md  accuracy_aware_quantization_spec.json  default_quantization_spec.json
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/docs/: BestPractices.md  CLI.md  E2eExample.md  FrequentlyAskedQuestions.md  InstallationGuide.md  LowPrecisionOptimizationGuide.md
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/pot/: __main__.py
openvino_2021.4.582/deployment_tools/tools/post_training_optimization_toolkit/tools/: evaluate.py
openvino_2021.4.582/documentation/: OpenVINO-GetStarted-Windows-online.html  OpenVINO-Install-Windows-online.html
openvino_2021.4.582/licensing/: OpenVINOsupport.txt  readme.txt
openvino_2021.4.582/licensing/deployment_tools/: redist.txt  third-party-programs.txt
openvino_2021.4.582/licensing/deployment_tools/tools/model_optimizer/: third-party-programs.txt
openvino_2021.4.582/licensing/deployment_tools/tools/post_training_optimization_tool/: third-party-programs.txt
openvino_2021.4.582/licensing/documentation/: third-party-programs.txt
openvino_2021.4.582/licensing/install_dependencies/: redist.txt
openvino_2021.4.582/licensing/opencv/: redist.txt
openvino_2021.4.582/opencv/: build_params.txt  ffmpeg-download.ps1  version.txt
openvino_2021.4.582/opencv/cmake/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake
openvino_2021.4.582/python/python3.6/: _pyngraph.cp36-win_amd64.pyd
openvino_2021.4.582/python/python3.6/openvino/inference_engine/: constants.pyd  ie_api.pyd
openvino_2021.4.582/python/python3.6/openvino/offline_transformations/: offline_transformations_api.pyd
openvino_2021.4.582/python/python3.7/: _pyngraph.cp37-win_amd64.pyd
openvino_2021.4.582/python/python3.7/openvino/inference_engine/: constants.pyd  ie_api.pyd
openvino_2021.4.582/python/python3.7/openvino/offline_transformations/: offline_transformations_api.pyd
openvino_2021.4.582/python/python3.8/: _pyngraph.cp38-win_amd64.pyd
openvino_2021.4.582/python/python3.8/openvino/inference_engine/: constants.pyd  ie_api.pyd
openvino_2021.4.582/python/python3.9/: _pyngraph.cp39-win_amd64.pyd
openvino_2021.4.582/python/python3/cv2/: config.py
(+139 files in other folders)
